--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,13 @@
    padding: 0;
    box-sizing: border-box;
 }
+
+.clearfix::after {
+   content: '';
+   display: table;
+   clear: both;
+}
+
 body {
    font-family: 'Whitney', 'Helvetica Neue', 'Helvetica', 'Arial, sans-serif';
 }
@@ -162,3 +169,31 @@ header {
 .text-right p {
    line-height: 25px;
 }
+
+
+
+.img-right {
+   height: 600px;
+   margin-top: 100px;
+}
+
+.immage-right{
+   float: left;
+   width: 65%;
+   height: 100%;
+   padding-left: 100px;
+}
+.immage-right img {
+   width: 95%;
+}
+
+.text-left {
+   width: 35%;
+   float: left;
+   padding: 20px 20px 0 15px;
+}
+.text-left h2 {
+   font-size: 40px;
+   margin-bottom: 30px;
+}
+
