--- a/css/style.css
+++ b/css/style.css
@@ -226,6 +226,7 @@ header {
    position: relative;
    text-align: center;
    height: 100px;
+   margin-bottom: 100px;
 }
 .main-footer h3 {
    font-size: 25px;
@@ -235,6 +236,7 @@ header {
    top: o;
    left: 50%;
    transform: translateX(-50%);
+
    background-image: url('../img/stars.svg');
    background-position: center;
    background-size: contain;
@@ -244,7 +246,6 @@ header {
 }
 
 .btn-purple {
-   background-color: rgb(145,161,222);
    position: absolute;
    bottom: 0;
    left: 50%;
@@ -252,9 +253,22 @@ header {
    border-radius: 30px;
 }
 .btn-purple a {
+   background-color: rgb(145,161,222);
    color: white;
    display: inline-block;
    text-decoration: none;
    padding: 15px 25px;
+   border-radius: 30px;
+}
+.btn-purple a:hover {
+   transform: scale(1.1);
+}
 
+
+/* Section Footer  */
+
+footer {
+   width: 100%;
+   height: 800px;
+   background-color: black;
 }
